[package]
name = "radio-and-ham-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = { version = "0.26.1", features = ["dates"] }
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
chrono = "0.4.39"
hambands = "1.0.0"
regex = "1.11.1"
lazy-regex = "3.4.1"
yeet-ops = "1.0.0"
rust_decimal = "1.36.0"
hound = "3.5.1"
byteorder = "1.5.0"
num-complex = "0.4.6"
bczhc_lib = { path = "/home/bczhc/code/rust/lib/" }
hilbert_transform = "0.1.1"
lowpass-filter = "0.3.2"
shell-words = "1.1.0"
rustfft = "6.2.0"
dasp = "0.11.0"
rayon = "1.10.0"

[[bin]]
path = "src/qso_sheet_to_adi.rs"
name = "qso-sheet-to-adi"

[[bin]]
path = "src/sdrpp_iq_demod_ssb.rs"
name = "sdrpp-iq-demod-ssb"

[[bin]]
path = "src/ssb.rs"
name = "ssb"

[[bin]]
path = "src/two_audio_to_iq_mod.rs"
name = "two-audio-to-iq-mod"